# Panama

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  app_structs.rs  audio.rs  config.rs  db.rs  draw.rs  helpers.rs  main.rs  math_ws.rs  nodes.rs  quiz.rs  svg_diagram.rs  tutor.rs  ui.rs  ui_cards.rs  ui_create_tutor.rs  ui_math_ws.rs  ui_quiz.rs  ui_tutor_detail.rs  ui_tutor_session.rs  ui_tutors.rs
tutors/art-visual-mastery/: config.toml
tutors/chem-for-med/: config.toml
tutors/deutsch-c1/: config.toml
tutors/deutsch-c1/quizzes/: akkusativpraepositionen.toml  dativpraepositionen.toml  finale-konnektoren.toml  genitivpraepositionen.toml  hin-her-praefixe.toml  infinitivkonstruktionen.toml  kausale-konnektoren.toml  konjunktiv-i.toml  konjunktiv-ii.toml  konzessive-konnektoren.toml  modalpartikeln.toml  nominalstil.toml  partizipialkonstruktionen.toml  praepositionen-kasus.toml  praeteritum.toml  reflexive-verben.toml  relativsaetze.toml  richtungspraepositionen.toml  temporale-praepositionen.toml  vorgangspassiv.toml  wechselpraepositionen.toml  wissen-kennen.toml  wortbildung.toml  zustandspassiv.toml
tutors/kreativitaet/: config.toml
tutors/math/: config.toml
tutors/observation/: config.toml
tutors/observation/materials/: sustained-attention-1.toml
tutors/problem-solving/: config.toml
